creating the styling for the classes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
 
     <header>
-      <h1>RR</h1>
+      <h2>RR</h2>
       <nav>
         <a>Github</a>
         <a>LinkedIn</a>
@@ -33,9 +33,9 @@
 
     <main>
       <section>
-      <div>
+      <div class="nameContainer">
         <h1>Rony Reyes</h1>
-        <p>Logic in every line, simplicity by design.</p>
+        <p class="darkerText">Logic in every line, simplicity by design.</p>
       </div>
       <div>
         <div>
@@ -62,7 +62,7 @@
     <section>
       <p>Projects</p>
       <div>
-        
+
       </div>
     </section>
     </main>
