adding images in my profile

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
     <main>
       <section>
-      <div class="nameContainer">
+      <div class="Main">
         <h1>Rony Reyes</h1>
         <p class="darkerText">Logic in every line, simplicity by design.</p>
       </div>
       <div>
         <div>
-          <img src="" alt="profile-img" />
+          <img src="https://media.licdn.com/dms/image/D5603AQEmMJ9SfbMAMA/profile-displayphoto-shrink_200_200/0/1704306349307?e=1711584000&v=beta&t=1Zx2ifO9Bf6bNdg35UZJmC9jTvJU7J2p-1_zsw0x8J8" alt="profile-img" />
         </div>
         <div>
           <div>
