aliging the stats

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
   </head>
 
   <body>
-
     <header>
       <h2>RR</h2>
       <nav>
@@ -33,43 +32,50 @@
 
     <main>
       <section>
-      <div class="Main">
-        <h1>Rony Reyes</h1>
-        <p class="darkerText">Logic in every line, simplicity by design.</p>
-      </div>
-      <div class="Stats">
-        <div class="Picture">
-          <img src="https://media.licdn.com/dms/image/D5603AQEmMJ9SfbMAMA/profile-displayphoto-shrink_200_200/0/1704306349307?e=1711584000&v=beta&t=1Zx2ifO9Bf6bNdg35UZJmC9jTvJU7J2p-1_zsw0x8J8" alt="profile-img" />
+        <div class="Main">
+          <h1>Rony Reyes</h1>
+          <p class="darkerText">Logic in every line, simplicity by design.</p>
         </div>
-        <div class="Childstats">
-          <div>
-            <i class="fa-solid fa-star"></i>
-            <p class="darkerText">20 Repositories</p>
+        <div class="Stats">
+          <div class="Picture">
+            <img
+              src="https://media.licdn.com/dms/image/D5603AQEmMJ9SfbMAMA/profile-displayphoto-shrink_200_200/0/1704306349307?e=1711584000&v=beta&t=1Zx2ifO9Bf6bNdg35UZJmC9jTvJU7J2p-1_zsw0x8J8"
+              alt="profile-img"
+            />
           </div>
-          <div>
-            <i class="fa-brands fa-github"></i>
-            <p class="darkerText">1687 Contributions</p>
-          </div>
-          <div>
-            <i class="fa-solid fa-language"></i>
-            <p class="darkerText">Speak 3 languages: Spanish, English and French</p>
+          <div class="Childstats">
+            <div>
+              <div>
+                <i class="fa-solid fa-star"></i>
+              </div>
+              <p class="darkerText">20 Repositories</p>
+            </div>
+            <div>
+              <div>
+                <i class="fa-brands fa-github"></i>
+              </div>
+              <p class="darkerText">1687 Contributions</p>
+            </div>
+            <div>
+              <div>
+                <i class="fa-solid fa-language"></i>
+              </div>
+              <p class="darkerText">
+                Spanish English and French
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-      <div>
-        <a>
-          <p>Email me</p>
-        </a>
-      </div>
-    </section>
-    <section>
-      <p>Projects</p>
-      <div>
-
-      </div>
-    </section>
+        <div>
+          <a>
+            <p>Email me</p>
+          </a>
+        </div>
+      </section>
+      <section>
+        <p>Projects</p>
+        <div></div>
+      </section>
     </main>
-
   </body>
-
 </html>
