adding a little description about myself

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section>
         <div class="Main">
           <h1>Rony Reyes</h1>
-          <p class="darkerText">Logic in every line, simplicity by design.</p>
+          <p class="darkerText">Logic in every line & simplicity by design.</p>
         </div>
         <div class="Stats">
           <div class="Picture">
@@ -43,29 +43,30 @@
               alt="profile-img"
             />
           </div>
-          <div class="Childstats">
+          <div class="Childstats darkerText">
             <div>
               <div>
                 <i class="fa-solid fa-star"></i>
               </div>
-              <p class="darkerText">20 Repositories</p>
+              <p class="">20 Repositories</p>
             </div>
             <div>
               <div>
                 <i class="fa-brands fa-github"></i>
               </div>
-              <p class="darkerText">1687 Contributions</p>
+              <p class="">1687 Contributions</p>
             </div>
             <div>
               <div>
                 <i class="fa-solid fa-language"></i>
               </div>
-              <p class="darkerText">
+              <p class="">
                 Spanish English and French
               </p>
             </div>
           </div>
         </div>
+        <p>Hi, My name is Rony Reyes, junior software developer who loves coding and resolving problems, I love sports and learning new things about this world.</p>
         <div>
           <a>
             <p>Email me</p>
