--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
           </div>
         </div>
-        <p>Hi, My name is Rony Reyes, junior software developer who loves coding and resolving problems, I love sports and learning new things about this world.</p>
+        <p class="Me">Hi, My name is Rony Reyes, junior software developer who loves coding and resolving problems, I love sports and learning new things about this world.</p>
         <div>
           <a>
             <p>Email me</p>
