creating the email me part

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         </div>
         <p class="Me">Hi, My name is Rony Reyes, junior software developer who loves coding and resolving problems, I love sports and learning new things about this world.</p>
         <div>
-          <a>
+          <a class="Reach darkerText">
+            <i class="fa-solid fa-arrow-right"></i>
             <p>Email me</p>
           </a>
         </div>
