adding new componets

--- a/index.html
+++ b/index.html
@@ -74,9 +74,17 @@
           </a>
         </div>
       </section>
-      <section>
-        <p>Projects</p>
-        <div></div>
+      <section class="Mainproject">
+        <p class="darkerText headerText">Projects</p>
+        <div class="Eachproject">
+          <div>
+            <p class="darkerText">January 14, 2024</p>
+            <p>An interactive and engaging Fighting Game using HTML Canvas</p>
+          </div>
+          <div>
+            <img src="" alt="Eternal_combat-img">
+          </div>
+        </div>
       </section>
     </main>
   </body>
