creating the styles to show the repository under each project

--- a/index.html
+++ b/index.html
@@ -82,7 +82,25 @@
             <p>An interactive and engaging Fighting Game using HTML Canvas</p>
           </div>
           <div>
-            <img src="" alt="Eternal_combat-img">
+            <img src="/public/Eternal.jpg" alt="Eternal.img">
+          </div>
+        </div>
+        <div class="Eachproject">
+          <div>
+            <p class="darkerText">January 14, 2024</p>
+            <p>An interactive and engaging Fighting Game using HTML Canvas</p>
+          </div>
+          <div>
+            <img src="/public/Eternal.jpg" alt="Eternal.img">
+          </div>
+        </div>
+        <div class="Eachproject">
+          <div>
+            <p class="darkerText">January 14, 2024</p>
+            <p>An interactive and engaging Fighting Game using HTML Canvas</p>
+          </div>
+          <div>
+            <img src="/public/Eternal.jpg" alt="Eternal.img">
           </div>
         </div>
       </section>
