creating the links to refer to the portfolio projects

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
           <div class="Childstats darkerText">
             <div>
               <div>
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-code"></i>
               </div>
-              <p class="">20 Repositories</p>
+              <p class="">20 Projects</p>
             </div>
             <div>
               <div>
@@ -60,13 +60,15 @@
               <div>
                 <i class="fa-solid fa-language"></i>
               </div>
-              <p class="">
-                Spanish English and French
-              </p>
+              <p class="">Spanish English and French</p>
             </div>
           </div>
         </div>
-        <p class="Me">Hi, My name is Rony Reyes, junior software developer who loves coding and resolving problems, I love sports and learning new things about this world.</p>
+        <p class="Me">
+          Hi, My name is Rony Reyes, junior software developer who loves coding
+          and resolving problems, I love sports and learning new things about
+          this world.
+        </p>
         <div>
           <a class="Reach darkerText">
             <i class="fa-solid fa-arrow-right"></i>
@@ -80,27 +82,44 @@
           <div>
             <p class="darkerText">January 14, 2024</p>
             <p>An interactive and engaging Fighting Game using HTML Canvas</p>
+
+            <div class="linkcontainer">
+              <a class="Linkitem">
+                <div>
+                  <i class="fa-solid fa-folder"></i>
+                </div>
+                <p class="">File</p>
+              </a>
+              <a class="Linkitem">
+                <div>
+                  <i class="fa-solid fa-bolt"></i>
+                </div>
+                <p class="">Live</p>
+              </a>
+            </div>
           </div>
           <div>
-            <img src="/public/Eternal.jpg" alt="Eternal.img">
+            <img src="/public/Eternal.jpg" alt="Eternal.img" />
           </div>
         </div>
+
         <div class="Eachproject">
           <div>
             <p class="darkerText">January 14, 2024</p>
             <p>An interactive and engaging Fighting Game using HTML Canvas</p>
           </div>
           <div>
-            <img src="/public/Eternal.jpg" alt="Eternal.img">
+            <img src="/public/Eternal.jpg" alt="Eternal.img" />
           </div>
         </div>
+
         <div class="Eachproject">
           <div>
             <p class="darkerText">January 14, 2024</p>
             <p>An interactive and engaging Fighting Game using HTML Canvas</p>
           </div>
           <div>
-            <img src="/public/Eternal.jpg" alt="Eternal.img">
+            <img src="/public/Eternal.jpg" alt="Eternal.img" />
           </div>
         </div>
       </section>
