--- a/index.html
+++ b/index.html
@@ -84,19 +84,20 @@
             <p>An interactive and engaging Fighting Game using HTML Canvas</p>
 
             <div class="linkcontainer">
-              <a class="Linkitem">
+              <a target="_blank" href="https://github.com/RonyDanielReyes/Eternal-Combat" class="Linkitem">
                 <div>
                   <i class="fa-solid fa-folder"></i>
                 </div>
                 <p class="">File</p>
               </a>
-              <a class="Linkitem">
+              <a target="_blank" href="https://eternal-combat.netlify.app/game" class="Linkitem">
                 <div>
                   <i class="fa-solid fa-bolt"></i>
                 </div>
                 <p class="">Live</p>
               </a>
             </div>
+
           </div>
           <div>
             <img src="/public/Eternal.jpg" alt="Eternal.img" />
@@ -107,6 +108,21 @@
           <div>
             <p class="darkerText">January 14, 2024</p>
             <p>An interactive and engaging Fighting Game using HTML Canvas</p>
+            <div class="linkcontainer">
+              <a target="_blank" href="https://github.com/RonyDanielReyes/Eternal-Combat" class="Linkitem">
+                <div>
+                  <i class="fa-solid fa-folder"></i>
+                </div>
+                <p class="">File</p>
+              </a>
+              <a target="_blank" href="https://eternal-combat.netlify.app/game" class="Linkitem">
+                <div>
+                  <i class="fa-solid fa-bolt"></i>
+                </div>
+                <p class="">Live</p>
+              </a>
+            </div>
+            
           </div>
           <div>
             <img src="/public/Eternal.jpg" alt="Eternal.img" />
@@ -117,6 +133,21 @@
           <div>
             <p class="darkerText">January 14, 2024</p>
             <p>An interactive and engaging Fighting Game using HTML Canvas</p>
+            <div class="linkcontainer">
+              <a target="_blank" href="https://github.com/RonyDanielReyes/Eternal-Combat" class="Linkitem">
+                <div>
+                  <i class="fa-solid fa-folder"></i>
+                </div>
+                <p class="">File</p>
+              </a>
+              <a target="_blank" href="https://eternal-combat.netlify.app/game" class="Linkitem">
+                <div>
+                  <i class="fa-solid fa-bolt"></i>
+                </div>
+                <p class="">Live</p>
+              </a>
+            </div>
+            
           </div>
           <div>
             <img src="/public/Eternal.jpg" alt="Eternal.img" />
