adding last things

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <header>
       <h2>RR</h2>
       <nav>
-        <a>Github</a>
-        <a>LinkedIn</a>
+        <a class="darkerText" href="https://github.com/RonyDanielReyes" target="_blank">Github</a>
+        <a class="darkerText" href="https://www.linkedin.com/in/rony-daniel-reyes-lopez-41b1a9235/" target="_blank">LinkedIn</a>
       </nav>
     </header>
 
@@ -70,7 +70,7 @@
           this world.
         </p>
         <div>
-          <a class="Reach darkerText">
+          <a href="mailto:rony.reyes.web@gmail.com" class="Reach darkerText">
             <i class="fa-solid fa-arrow-right"></i>
             <p>Email me</p>
           </a>
@@ -84,20 +84,27 @@
             <p>An interactive and engaging Fighting Game using HTML Canvas</p>
 
             <div class="linkcontainer">
-              <a target="_blank" href="https://github.com/RonyDanielReyes/Eternal-Combat" class="Linkitem">
+              <a
+                target="_blank"
+                href="https://github.com/RonyDanielReyes/Eternal-Combat"
+                class="Linkitem"
+              >
                 <div>
                   <i class="fa-solid fa-folder"></i>
                 </div>
                 <p class="">File</p>
               </a>
-              <a target="_blank" href="https://eternal-combat.netlify.app/game" class="Linkitem">
+              <a
+                target="_blank"
+                href="https://eternal-combat.netlify.app/game"
+                class="Linkitem"
+              >
                 <div>
                   <i class="fa-solid fa-bolt"></i>
                 </div>
                 <p class="">Live</p>
               </a>
             </div>
-
           </div>
           <div>
             <img src="/public/Eternal.jpg" alt="Eternal.img" />
@@ -106,51 +113,33 @@
 
         <div class="Eachproject">
           <div>
-            <p class="darkerText">January 14, 2024</p>
-            <p>An interactive and engaging Fighting Game using HTML Canvas</p>
+            <p class="darkerText">March, 2024</p>
+            <p>A website helps students to connect with employers...</p>
             <div class="linkcontainer">
-              <a target="_blank" href="https://github.com/RonyDanielReyes/Eternal-Combat" class="Linkitem">
+              <a
+                target="_blank"
+                href="https://github.com/RonyDanielReyes/Eternal-Combat"
+                class="Linkitem"
+              >
                 <div>
                   <i class="fa-solid fa-folder"></i>
                 </div>
                 <p class="">File</p>
               </a>
-              <a target="_blank" href="https://eternal-combat.netlify.app/game" class="Linkitem">
+              <a
+                target="_blank"
+                href="https://eternal-combat.netlify.app/game"
+                class="Linkitem"
+              >
                 <div>
                   <i class="fa-solid fa-bolt"></i>
                 </div>
                 <p class="">Live</p>
               </a>
             </div>
-            
           </div>
           <div>
-            <img src="/public/Eternal.jpg" alt="Eternal.img" />
-          </div>
-        </div>
-
-        <div class="Eachproject">
-          <div>
-            <p class="darkerText">January 14, 2024</p>
-            <p>An interactive and engaging Fighting Game using HTML Canvas</p>
-            <div class="linkcontainer">
-              <a target="_blank" href="https://github.com/RonyDanielReyes/Eternal-Combat" class="Linkitem">
-                <div>
-                  <i class="fa-solid fa-folder"></i>
-                </div>
-                <p class="">File</p>
-              </a>
-              <a target="_blank" href="https://eternal-combat.netlify.app/game" class="Linkitem">
-                <div>
-                  <i class="fa-solid fa-bolt"></i>
-                </div>
-                <p class="">Live</p>
-              </a>
-            </div>
-            
-          </div>
-          <div>
-            <img src="/public/Eternal.jpg" alt="Eternal.img" />
+            <img src="/public/coming.jpg" alt="Eternal.img" />
           </div>
         </div>
       </section>
