formatting the file

--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
               <a
                 target="_blank"
                 href="https://eternal-combat.netlify.app/game"
-                class="Linkitem"
-              >
+                class="Linkitem">
                 <div>
                   <i class="fa-solid fa-bolt"></i>
                 </div>
