trying to do a couple of changes

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
           </div>
           <div>
-            <img src="/public/Eternal.jpg" alt="Eternal.img" />
+            <img src="public/Eternal.jpg" alt="Eternal.jpg" />
           </div>
         </div>
 
@@ -139,7 +139,7 @@
             </div>
           </div>
           <div>
-            <img src="/public/coming.jpg" alt="Eternal.img" />
+            <img src="public/coming.jpg" alt="Eternal.jpg" />
           </div>
         </div>
         
