updating personal website

--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
 
         <div class="Eachproject">
           <div>
-            <p class="darkerText">March, 2024</p>
-            <p>A website helps students to connect with employers...</p>
+            <p class="darkerText">February 17, 2024</p>
+            <p>A front-end Weather application created with HTML and CSS</p>
             <div class="linkcontainer">
               <a
                 target="_blank"
-                href="https://github.com/RonyDanielReyes/Eternal-Combat"
+                href="https://github.com/RonyDanielReyes/Weather-App"
                 class="Linkitem"
               >
                 <div>
@@ -132,7 +132,7 @@
               </a>
               <a
                 target="_blank"
-                href="https://eternal-combat.netlify.app/game"
+                href="https://ronyreyesweatherapp.netlify.app/"
                 class="Linkitem">
                 <div>
                   <i class="fa-solid fa-bolt"></i>
@@ -142,7 +142,7 @@
             </div>
           </div>
           <div>
-            <img src="public/coming.jpg" alt="Eternal.jpg" />
+            <img src="public/weather.jpg" alt="weather.jpg" />
           </div>
         </div>
         
