last changes for personal website

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="Eachproject">
           <div>
             <p class="darkerText">January 14, 2024</p>
-            <p>An interactive and engaging Fighting Game using HTML Canvas</p>
+            <p>An interactive Game application using HTML canvas and CSS </p>
 
             <div class="linkcontainer">
               <a
